--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
-    "@types/node": "latest"
+    "@types/node": "latest",
+    "typescript": "latest"
   }
 }
