--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
+    "telegraf": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
